syntax = "proto3";

option go_package = "github.com/impurityprizrak/meander/go";

service MeanderIO {
    rpc CreateClient (ClientPayload) returns (Client);
    rpc ConnectClient (ClientPayload) returns (Connection);
    rpc ValidateToken (ConnectionPayload) returns (Commit);
    rpc RegisterClient (Client) returns (Commit);
    rpc RegisterNode (Node) returns (Commit);
}

message ClientPayload {
    string alias = 1;
    string password = 2;
    string secret = 3;
}

message Client {
    string alias = 1;
    string node = 2;
    string address = 3;
    string user_id = 4;
}

message Connection {
    string user_id = 1;
    string token = 2;
}

message ConnectionPayload {
    string user_id = 1;
    string token = 2;
    string secret = 3;
}

message Node {
    string syncer = 1;
    string host = 2;
    string version = 3;
    string status = 4;
}

message Commit {
    int32 status = 1;
    optional string error = 2;
}   